--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css"> 
     <title>My Webpage</title>
   </head>
-
   <body>
     <div class="header">
-      <h1>Hello World</h1>
+      <h1>Welcome to Anaya Bussey's Page</h1>
     </div>
 
     <div class="sidebar">
       <h2>Hi, I'm Anaya</h2>
-      <p>I love cats! Cats are so cute!</p>
-    </div>
-    <div class="main">
-	<h2>My Projects</h2>
-	<a href=""></a>
-    </div>
+      <p>I am a rising sophmore! I am currently in a CyberSecurity program this summer!<br> I love cats so much because they are so cute! </p>
+</div>
 	
 
   </body>
